@@ -1,5 +1,7 @@
 = HEAD
 
+* Add multi_run plugin, for dispatching to multiple rack applications based on the request path prefix (jeremyevans)
+
 * Add environments plugin, for handling development/test/production environments (jeremyevans)
 
 * Do not cache templates by default if RACK_ENV is development (jeremyevans)
